kubernetes/apps/apps/searxng/searxng/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - searxng.cloud.traunseenet.com
      secretName: searxng-cert
  ingressClassName: traefik
  rules:
    - host: searxng.cloud.traunseenet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng-web
                port:
                  name: http
